Ngay 7: init project, header, menu, logo

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.ant-layout{
+  @apply bg-white
+}
+
+.ant-layout-header{
+  @apply bg-[#F3F5F7] p-0 flex items-center
+}
+
+.ant-menu{
+  @apply bg-inherit
+}
+.search input.ant-input{
+  @apply leading-[32px] border px-2 border-r-0
+}
